--- a/styles.css
+++ b/styles.css
@@ -1355,6 +1355,8 @@ body {
 .achievement-image iframe {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  object-position: top;
   object-fit: contain;
   border: none;
 }
